--- a/apps/apies/templates/apies/api_modal.html
+++ b/apps/apies/templates/apies/api_modal.html
@@ -5,11 +5,11 @@
             <div class="modal-header">
                 <h3>Add API</h3>
             </div>
-            <form id="AvatarForm" action="" method="post">{% csrf_token %}            
+            <form id="AvatarForm" action="" method="post">{% csrf_token %}
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
-                        
+
                         {% for field in api_form %}
                         <div class="form-group">
                             <label>{{ field.label }}</label>
@@ -20,10 +20,16 @@
                         {% if api_form.non_field_errors %}
                         <span class="form-errors">{{ api_form.non_field_errors|striptags }}</span>
                         {% endif %}
+
+                        <p>
+                            <strong class="text-danger">Important:</strong><br>
+                            Adding an api can take some time. Part of the data will be saved to give the best user experience.
+                        </p>
+
                     </div>
                 </div>
             </div>
-            
+
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary" >Save</button>
             </div>
