--- a/apps/users/templates/base.html
+++ b/apps/users/templates/base.html
@@ -13,10 +13,12 @@
     <title>{% block page_title %}{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    {# <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"> #}
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
-    <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <!-- Custom Fonts -->
 <!--
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -90,7 +92,7 @@
         {# content page #}
         <div id="page-wrapper">
 
-            <div class="container-fluid">
+            <div class="container">
             {% block content %}{% endblock %}
             </div>
             <!-- /.container-fluid -->
@@ -105,7 +107,8 @@
 
     <!-- Bootstrap Core JavaScript -->
 
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     {% block js %}{% endblock %}
 </body>
 </html>
