--- a/apps/apies/templates/apies/apies.html
+++ b/apps/apies/templates/apies/apies.html
@@ -24,6 +24,9 @@
     {% endif %}
         <a href="#" class="btn btn-primary btn-md" role="button" data-toggle="modal" data-target="#ApiModal">Add API</a>
     </div>
+    <div class="col-md-4">
+
+    </div>
 </div>
 
 
