--- a/apps/apies/templates/apies/api_modal.html
+++ b/apps/apies/templates/apies/api_modal.html
@@ -6,9 +6,14 @@
                 <h3>Add API</h3>
             </div>
             <form id="AvatarForm" action="" method="post">{% csrf_token %}
+            <input type="hidden" name="user_id" value="{{ user.pk }}">
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
+
+                        {% if api_form.non_field_errors %}
+                        <span class="form-errors">{{ api_form.non_field_errors|striptags }}</span>
+                        {% endif %}
 
                         {% for field in api_form %}
                         <div class="form-group">
@@ -17,13 +22,11 @@
                             <span class="form-errors">{{ field.errors|striptags }}</span>
                         </div>
                         {% endfor %}
-                        {% if api_form.non_field_errors %}
-                        <span class="form-errors">{{ api_form.non_field_errors|striptags }}</span>
-                        {% endif %}
 
                         <p>
                             <strong class="text-danger">Important:</strong><br>
                             Adding an api can take some time. Part of the data will be saved to give the best user experience.
+                            Click <a href="{% url 'apies' %}" >here</a> for more information.
                         </p>
 
                     </div>
